<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add">

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.incidencias10.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.incidencias10.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.example.incidencias10.ui.preferences.PreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />

</navigation>